# pet-stat-server

./: .dockerignore  .gitignore  README.md  compose.dev.yaml  compose.yaml  cosmetics-style.css  cosmetics.html
containers/db/: Dockerfile  README.md
containers/db/scripts/init_db.d/: 01_define_enums.sql  02_create_user.sql
containers/pet-stats/: Cargo.toml  Dockerfile  README.md  bacon.toml
containers/pet-stats/.cargo/: config.toml
containers/pet-stats/api/: Cargo.toml
containers/pet-stats/api/src/: context_data.rs  db.rs  error.rs  lib.rs  middleware.rs
containers/pet-stats/api/src/gql/: guards.rs  middleware.rs  mod.rs  objects.rs  schema.rs  utils.rs
containers/pet-stats/api/src/gql/mutations/: mod.rs  pet.rs  user.rs
containers/pet-stats/api/src/gql/queries/: mod.rs  pet.rs  user.rs
containers/pet-stats/api/src/routes/: graphql.rs  health_check.rs  mod.rs
containers/pet-stats/config/: Cargo.toml
containers/pet-stats/config/src/: app_config.rs  auth_config.rs  base_config.rs  db_config.rs  error.rs  lib.rs  logging_config.rs  secret_config.rs  utils.rs
containers/pet-stats/entity/: Cargo.toml
containers/pet-stats/entity/src/entities/: feed_records.rs  mod.rs  oauth_accounts.rs  pets.rs  prelude.rs  sea_orm_active_enums.rs  user_tokens.rs  users.rs  work_goals.rs  work_records.rs
containers/pet-stats/jwt/: Cargo.toml
containers/pet-stats/jwt/src/: lib.rs
containers/pet-stats/migration/: Cargo.toml
containers/pet-stats/migration/src/: lib.rs  main.rs
containers/pet-stats/migration/src/migrators/: m20250121_000001_create_user_table.rs  m20250808_000001_create_pet_table.rs  mod.rs  utils.rs
containers/pet-stats/rest/: Cargo.toml
containers/pet-stats/rest/src/: client.rs  error.rs
containers/pet-stats/service/: Cargo.toml
containers/pet-stats/service/src/: jwt.rs  lib.rs  utils.rs
containers/pet-stats/service/src/auth/: error.rs  google.rs  mod.rs  model.rs  oauth_provider.rs  refresh_token.rs
containers/pet-stats/service/src/mutations/: pet.rs  user.rs
containers/pet-stats/service/src/queries/: pet.rs  user.rs
containers/pet-stats/service/tests/: google_oauth_test.rs  rotate_refresh_token_test.rs
containers/pet-stats/src/: main.rs
containers/pet-stats/tracer/: Cargo.toml
containers/pet-stats/tracer/src/: lib.rs
scripts/: install_mold.sh
